--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "6551.js",
   "version": "1.0.0",
   "description": "NFT Bound account JS toolkit ",
-  "main": "index.js",
+  "main": "registry.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
